# rust-segmented-file-client

./: Cargo.toml  README.md
src/: file_manager.rs  lib.rs  main.rs  packet_group.rs  packets.rs
