[package]
name = "rust-segmented-file-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.1", features = ["net", "rt-multi-thread", "macros"] }
quickcheck = "1"

[dev-dependencies]
quickcheck_macros = "1"
rand = "0.8.5"
